init github actions

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -32,6 +32,7 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Setup MySQL database
       run: |
+        sudo /etc/init.d/mysql start
         mysql -e 'CREATE DATABASE ${{ env.DB_DATABASE }};' -u ${{ env.DB_USER }} -p ${{ env.DB_PASSWORD }}
         mysql -e 'SHOW DATABASES;' -u ${{ env.DB_USER }} -p ${{ env.DB_PASSWORD }}
 #     - name: Lint with flake8
