--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -12,12 +12,18 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    
-    env:
-      DB_DATABASE: test_spm_db
-      DB_USER: root
-      DB_PASSWORD: 'root'
-      DB_HOST: localhost
+    services:
+      mysql:
+        image: mysql:5.7
+        env:
+          DB_DATABASE: test_spm_db
+          DB_USER: root
+          DB_PASSWORD: password
+          MYSQL_ROOT_PASSWORD: password
+          DB_HOST: localhost
+        ports:
+        - 3306
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=10
 
     steps:
     - uses: actions/checkout@v3
@@ -33,8 +39,8 @@ jobs:
     - name: Setup MySQL database
       run: |
         sudo /etc/init.d/mysql start
-        mysql -e 'CREATE DATABASE ${{ env.DB_DATABASE }};' -u ${{ env.DB_USER }} -p ${{ env.DB_PASSWORD }}
-        mysql -e 'SHOW DATABASES;' -u ${{ env.DB_USER }} -p ${{ env.DB_PASSWORD }}
+        mysql --host localhost --port 3306 -e 'CREATE DATABASE ${{ env.DB_DATABASE }};' -uroot -ppassword
+        mysql --host localhost --port 3306 -e 'SHOW DATABASES;' -uroot -ppassword
 #     - name: Lint with flake8
 #       run: |
 #         # stop the build if there are Python syntax errors or undefined names
