init github actions

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -16,8 +16,8 @@ jobs:
       mysql:
         image: mysql:5.7
         env:
-          DB_DATABASE: test_spm_db
-          DB_USER: root
+          DB_NAME: test_spm_db
+          DB_USERNAME: root
           DB_PASSWORD: password
           MYSQL_ROOT_PASSWORD: password
           DB_HOST: localhost
@@ -36,8 +36,20 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: Create env file
+      run: |
+        touch .env
+        echo DB_HOSTNAME=${{ env.DB_HOSTNAME }} >> .env
+        echo DB_PORT=3306 >> .env
+        echo DB_USERNAME=${{ env.DB_USERNAME }} >> .env
+        echo DB_PASSWORD=${{ env.DB_PASSWORD }} >> .env
+        echo DB_NAME=${{ env.DB_NAME }} >> .env
+        cat .env
+
     - name: Setup MySQL database
       run: |
+        sudo systemctl enable mysql.service
+        sudo systemctl start mysql.service
         mysql --host localhost --port 3306 -e 'CREATE DATABASE ${{ env.DB_DATABASE }};' -uroot -ppassword
         mysql --host localhost --port 3306 -e 'SHOW DATABASES;' -uroot -ppassword
 #     - name: Lint with flake8
