--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -48,7 +48,7 @@ jobs:
         # sudo systemctl enable mysql.service
         # sudo systemctl start mysql.service
         mysql -h ${{ env.DB_HOSTNAME }} --port 8888 -e "CREATE DATABASE IF NOT EXISTS test;" -u${{ env.DB_USERNAME }} -p${{ env.DB_PASSWORD }}
-        mysqlshow "test" > /dev/null 2>&1 && echo "Database exists."
+        mysqlshow -u${{ env.DB_USERNAME }} -p${{ env.DB_PASSWORD }} test > /dev/null 2>&1 && echo "Database exists."
 #     - name: Lint with flake8
 #       run: |
 #         # stop the build if there are Python syntax errors or undefined names
