--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ python-dotenv==0.21.0
 Flask==2.0.2
 Flask-Cors==3.0.10
 Flask-SQLAlchemy==2.5.1
+MySQL-python==1.2.5
 werkzeug==2.0.3
 # Flask-SQLAlchemy==2.5.1
 # functions==0.7.0
